--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,7 +1,9 @@
-<form class="" action="/tweets" method="post">
+<% if flash.has?(:message) %>
+  <%= flash[:message] %>
+<% end %>
+
   <h3>Create a new tweet!</h3>
-  <form class="" action="/tweets" method="post">
+  <form action="/tweets" method="post">
     <input type="text" name="content" id="content" placeholder="Tweet:">
-    <button type="submit" name="submit" value="submit">
+    <button type="submit" name="submit" id="submit" value="Create">
   </form>
-</form>
