--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,1 +1,20 @@
+<% if flash.has?(:message) %>
+  <%= flash[:message] %>
+<% end %>
+
 <h1>Create User Page</h1>
+
+<form action="/signup" method="POST">
+
+        <b><label>Input New User Name:</label></b>
+        <input type="text" name="user[name]" id="username" placeholder="">
+      <br></br>
+        <b><label>What is your email?</label></b>
+        <input type="text" name="user[email]" id="email" placeholder="">
+      <br></br>
+        <b><label>What is your password?</label></b>
+        <input type="text" name="user[password]" id="password" placeholder="">
+    <br></br>
+        <input type="submit" name="submit" value="Create New User">
+
+</form>
