--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -7,13 +7,13 @@
 <form action="/signup" method="POST">
 
         <b><label>Input New User Name:</label></b>
-        <input type="text" name="user[name]" id="username" placeholder="">
+        <input type="text" name="username" id="username" placeholder="">
       <br></br>
         <b><label>What is your email?</label></b>
-        <input type="text" name="user[email]" id="email" placeholder="">
+        <input type="text" name="email" id="email" placeholder="">
       <br></br>
         <b><label>What is your password?</label></b>
-        <input type="text" name="user[password]" id="password" placeholder="">
+        <input type="text" name="password" id="password" placeholder="">
     <br></br>
         <input type="submit" name="submit" value="Create New User">
 
