--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -2,16 +2,16 @@
 
 <form action="/signup" method="POST">
   <label> Email: </label>
-  <input type="text" name="user[email]" id="user_email">
+  <input type="text" name="email" id="user_email">
   <br></br>
 
   <label> Username: </label>
-  <input type="text" name="user[name]" id="user_name">
+  <input type="text" name="username" id="user_name">
   <br></br>
 
   <label> Password: </label>
-  <input type="text" name="user[password]" id="user_password">
+  <input type="password" name="password" id="user_password">
   <br></br>
-  
+
   <input type="submit" value="Signup">
 </form>
