--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,12 +2,12 @@
 
 <form action="/login" method="POST">
   <label> Username: </label>
-  <input type="text" name="user[name]" id="username">
+  <input type="text" name="username" id="username">
   <br></br>
 
   <label> Password: </label>
-  <input type="text" name="user[password]" id="password">
+  <input type="password" name="password" id="password">
   <br></br>
-  
+
   <input type="submit" value="submit">
 </form>
