--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Tweets index?</h1>
-    <%= session[:user_id]%>
+    Welcome, <%= current_user.username %>
   </body>
 </html>
