--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -8,7 +8,7 @@
       <form action="/login" method="POST">
         <input type="text" name="username" placeholder="Username">
         <input type="password" name="password" placeholder="Password">
-        <input type="submit" value="Log in">
+        <input type="submit" id="submit" value="Log in">
       </form>
   </body>
  
