improve style for tweets page

--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,6 +1,6 @@
-<h1>Tweets Index?</h1>
-Welcome, <%= current_user.username %> </br>
-<a href="/tweets/new">New Tweet</a>
+<h3>Tweets</h3></br>
+Welcome, <%= current_user.username %>!</br></br>
+<a href="/tweets/new">Click here to creat a new tweet.</a></br>
 <br>
 <ul>
 <% @tweets.each do |tweet| %>
