--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -1,4 +1,4 @@
-<h1>Edit Tweet</h1>
+<h3 style="color:blue;">Edit Tweet</h3>
 <div>
 <form action="/tweets/<%= @tweet.id %>" method="post">
     <input type="text" name="tweet[content]" id="content" placeholder="Tweet here" value="<%= @tweet.content %>">
