--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,6 +1,7 @@
-<h3>Tweets</h3></br>
-Welcome, <%= current_user.username %>!</br></br>
-<a href="/tweets/new">Click here to creat a new tweet.</a></br>
+<h2>Welcome, <%= current_user.username %>!</h2></br>
+<h4 style="color:blue;">Check out your tweets.</h4>
+
+Click <a href="/tweets/new">here</a> to creat a new tweet.</br>
 <br>
 <ul>
 <% @tweets.each do |tweet| %>
