--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -1,6 +1,10 @@
-<h1><%= @tweet.content %></h1>
+<h3><%= @tweet.content %></h3>
 <a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
-<form action="/tweets/<%= @tweet.id %>" method="post">
-    <input type="hidden" name="_method" value="delete">
-    <input type="submit" value="Delete Tweet">
-</form>
+</br>
+</br>
+<div>
+  <form action="/tweets/<%= @tweet.id %>" method="post">
+      <input type="hidden" name="_method" value="delete">
+      <input type="submit" value="Delete Tweet">
+  </form>
+</div>
