--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -18,3 +18,5 @@
         <input type="submit" name="submit" value="Create New User">
 
 </form>
+
+<a href="/login">Already a user. Click here to login</a>
