--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,1 +1,11 @@
-<h1>Tweets Index List</h1>
+<h1>User: <%=@user.username%><h1>
+<h2>Welcome, This Page Lists ALL Tweets</h2>
+
+<%@alltweets.each do |t|%>
+    <li><%=t.content%></li>
+<%end%>
+
+<br></br>
+<a href="/tweets/new">Create a new tweet</a>
+<br></br>
+<a href="/logout">Logout</a>
