--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,8 +1,7 @@
-<h2>Log In to Fwitter!</h2>
+<h2>Log in to Fwitter!</h2>
 <br>
 <form action="/login" method="post">
   <input type="text" name="username" placeholder="Username:">
-  <input type="text" name="password" placeholder="Password:">
-  <input type="submit" id="submit">
+  <input type="password" name="password" placeholder="Password:">
+  <input type="submit" name="submit" value="submit">Log In</input>
 </form>
-<p>Don't have an account? Create one<a href="/signup">here</a>.</p>
