--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,8 +1,8 @@
 <h2>Sign Up to Create Your Own Fwitter Account</h2>
 <br>
 <form action="/signup" method="post">
-  Username:<input type="text" name="username" required>
-  Email:<input type="text" name="email" required>
-  Password:<input type="password" name="password" required>
+  Username:<input type="text" name="username" required><br><br>
+  Email:<input type="text" name="email" required><br><br>
+  Password:<input type="password" name="password" required><br><br>
   <input type="submit">
 </form>
