changed button values

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -3,5 +3,5 @@
 <form action="/login" method="post">
   <input type="text" name="username" placeholder="Username:">
   <input type="password" name="password" placeholder="Password:">
-  <input type="submit" name="submit" value="submit">Log In</input>
+  <input type="submit" name="submit" value="submit">
 </form>
