--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -8,4 +8,4 @@
 <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet Here </a>
 <br></br>
 
-<a href="/tweets">Click here to see all of your tweets</a>
+<a href="/tweets">Click here to see all of the tweets</a>
