--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -6,8 +6,16 @@
   <div>
     <h2>
       <li>
-        <%= tweet.content %>
-        <form action="/tweet"
+       <%= tweet.content %><sec style="font-size:60%; color: #297b5c;">&emsp; ...by: <%= tweet.user.username %></sec>
+        <h3>
+          <b>
+            <% if tweet.user_id == session[:user_id] %>
+            <form action="/tweets/<%=tweet.id%>">
+              <input type="submit" style="font-size:60%; color: #297b5c;" value="Edit Tweet"/>
+            </form>
+            <% end %>
+          </b>
+        </h3>
       </li>
     </h2>
   </div>
