--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -5,7 +5,7 @@
 <% end %>
 
 
-<h3>Sign Up</h3>
+<h3>Sign Up here if you're a first time user</h3>
 <form action="/signup" method="POST">
   <p>Name: <input type="text" name="username"></p>
   <p>Email: <input type="text" name="email"></p>
