--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -1,6 +1,7 @@
-<%= @tweet.content %><br>
-Edit Tweet<br>
-<form method="post" action="/tweets/<%=@tweet.id%>/delete">
-<input type="hidden" name="_method" value="delete">
-<input type="submit" value="Delete Tweet">
+<p><%= @tweet.content %></p>
+<br></br>
+<p><a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a></p>
+<form action="/tweets/<%= @tweet.id %>/delete" method="post">
+  <input id="hidden" type="hidden" name="_method" value="delete">
+  <button type="submit" name="delete" value="delete">Delete Tweet</button>
 </form>
