--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -1,5 +1,4 @@
-<p>
-<% @user.tweets.each do |t| %>
-<%= t.content %>
+<h1>Tweets:</h1>
+<% @tweets.each do |tweet| %>
+  <p><%= tweet.content %></p>
 <% end %>
-</p>
