--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,5 +1,5 @@
 <h1>Create New Tweet</h1>
 <form action='/tweets' method="post">
-    <input type="text" name="content" id="content">
-    <input type="submit" value="submit">
+    <label for="content">Content: <input type="text" name="content" id="content"> </label>
+    <button type="submit" name="submit" value="submit">Submit</button>
 </form>
