--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,5 +1,9 @@
-<form action='/login' method="POST">
-    <input type="text" name="username">
-    <input type="password" name="password">
-    <input type="submit" value="submit">
+<h1>Login</h1>
+<br></br>
+<form action="/login" method="post">
+  <label for="username">Username: <input id="username" type="text" name="username" value=""></label>
+  <br></br>
+  <label for="pasword">Password: <input id="password" type="password" name="password" value=""></label>
+  <br></br>
+  <button type="submit" name="submit" value="submit">Login</button>
 </form>
