--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -31,5 +31,7 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<br></br>
+<a href="/tweets">Click here to see all of the tweets</a>
   </body>
 </html>
