--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,10 +1,16 @@
 <!--
-OK so this used to be called "login.erb" but that's kinda shitty cause 'signing-up' for the first time
-is totally different than 'logging-in' as a first-time user and besides, the whole program is fucked up
-cause if you don't logout, the cookies will remember you and let you login again & create a whole second user.
-I'm going to try & fiz this whole mess.
+OK so this is called "login.erb" but that's kinda crappy cause 'signing-up' for the first time
+is totally different than 'logging-in' as a returning user and besides, the whole program is messed up
+cause if you don't logout, the cookies will remember you and let you login again & create a whole
+second user if you were to just copy & paste the "solution" branch from GitHub.  So since the
+program sucks as is, I'm going to first off fix this whole mess so that:
 
-When I'm done doing that...thos page will be obselete and not used anymore.
+  a.) When you try & sign-up with the same username and email address as an existing user, you'll be prompted to
+      either change your username or email address; otherwise you can troll the board by impersonating another user.
+
+  b.) When you try & URL hack the program (by going to, say, '/tweets/4/edit') you will get a notice basically
+      saying that you don't have permission to edit that particular tweet.
+
 -->
 
 <h2>Users</h2>
@@ -17,5 +23,5 @@ When I'm done doing that...thos page will be obselete and not used anymore.
 <form action="/login" method="POST">
   <p>Name: <input type="text" name="username"></p>
   <p>Password: <input type="text" name="password"></p>
-  <input class="btn btn-primary" type="submit">
+  <input class="btn btn-primary" type="submit" value="submit">
 </form>
