post signup & login routes

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,6 +1,8 @@
 <h2>FWITTER LOG IN</h2>
+<form method="post" action="/login">
 
-Username: <input type="text" value="user[username]" id="username">
-Password: <input type="password" value="user[password]" id="password">
+<input type="text" value="username" id="username" placeholder="Username:">
+<input type="password" value="password" id="password" placeholder="Password:">
 
 <input type="sumbit" value="LOG IN">
+</form>
