--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,7 +2,7 @@
 
 <h4>Would you like to:</h4>
 
-<a href="/users/login">LOG IN</a>
+<a href="/login">LOG IN</a>
 <br></br>
 
-<a href="/users/signup">SIGN UP</a>
+<a href="/signup">SIGN UP</a>
