--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -6,7 +6,7 @@
 <h3>Sign Up</h3>
 <form action="/signup" method="POST"></form>
        <label>Name: </label>
-        <input type="text" name="name"><br>
+        <input type="text" name="username"><br>
        <label>Email Address: </label>
         <input type="text" name="email"><br>
        <label>Password: </label>
