--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,17 +12,18 @@
   <body>
     <nav>
       <% if logged_in? %>
-        <a href=""></a>
+        <p>Welcome, <%= current_user.username %></p>
+        <a href="/tweets/new"></a>
         <a href="/logout">Logout</a>
-
-        <% else %>
-      <a href="/login">Login</a>
-      <a href="/signup">Signup</a>
+      <% else %>
+        <a href="/login">Login</a>
+        <a href="/signup">Signup</a>
       <% end %>
 
     </nav>
 
     <div class="container">
+      <h1>Fwitter</h1>
 
         <%= yield %>
 
