--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -10,6 +10,6 @@
        <label>Email Address: </label>
         <input type="text" name="email"><br>
        <label>Password: </label>
-        <input type="text" name="password"><br>
+        <input type="password" name="password"><br>
        <input class="btn btn-primary" type="submit" id="submit" name="submit" value="Sign Up">
 </form>
