--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,11 +1,7 @@
-<h2>Users</h2>
-  <% unless locals.empty? %>
-    <%= message %>
-  <% end %>
-
-<h3>Sign Up</h3>
+<h2>Users Sign Up</h3>
+<%= "Must include email and password" if @user && @user.errors.any? %>
 <form action="/signup" method="POST">
-       <label>Name: </label>
+       <label>User Name: </label>
         <input type="text" name="username"><br>
        <label>Email Address: </label>
         <input type="text" name="email"><br>
