Pushing up fixes and additional functionality

--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,5 +1,5 @@
 <h1>Create a Tweet</h1>
     <form action="/tweets" method="post">
       <label>Tweet: </label><input id='content' type='text' name='content'><br>
-      <input type='submit' value='Create'>
+      <input class="btn btn-primary" type='submit' value='Create'>
     </form>
