--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,2 +1,7 @@
-<h1><%= @user.username %> successfully signed up and logged in!</h1>
+<h3>Here are your tweets, <%= @user.username %></h3>
+<% @user.tweets.each do |tweet| %>
+<div>
+  <p><%= tweet.content %></p>
+</div>
+<% end %>
 <a href="/tweets/new">Tweet Here</a>
