--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,13 +1,11 @@
 <h2>Users</h3>
-<% unless locals.empty? %>
-  <%= message %>
-<% end %>
-<form action="/signup" method="POST">
+<div class="text-center">
+  <form class="form-signin" action="/signup" method="POST">
        <label>User Name: </label>
-        <input type="text" name="username"><br>
+        <input type="text" name="username" required><br>
        <label>Email Address: </label>
-        <input type="text" name="email"><br>
+        <input type="text" name="email" required><br>
        <label>Password: </label>
-        <input type="password" name="password"><br>
+        <input type="password" name="password" required><br>
        <input class="btn btn-primary" type="submit" id="submit" name="submit" value="Sign Up">
-</form>
+</form></div>
