--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,7 +1,8 @@
-<h1>Login to Fwitter!</h1>
-<form method="post" action="/login">
+<div class="text-center">
+  <h2>Please Login</h2>
+<form class="form-signin" method="post" action="/login">
   <input type="text" name="username" placeholder="Username:">
   <input type="password" name="password" placeholder="Password:">
 
   <input type="submit" value="submit">
-</form>
+</form></div>
