--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,7 +1,7 @@
 <h3>Here are your tweets, <%= @user.username %></h3>
 <% @user.tweets.each do |tweet| %>
-<div>
-  <p><%= tweet.content %></p>
-</div>
+<blockquote class="blockquote">
+  <p><a href="/tweets/<%= tweet.id %>"><%= tweet.id %>: </a><%= tweet.content %></p>
+</blockquote>
 <% end %>
-<a href="/tweets/new">Tweet Here</a>
+<a class="btn btn-outline-success" role="button" href="/tweets/new">Tweet Here</a>
