--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,5 +1,5 @@
-<h1>Fwitter Tweets</h1>
+<h1>Welcome,</h1>
 
-<% @tweets.each do |tweet|
+<% @tweets.each do |tweet| %>
   <li><a href="/tweets/<%=tweet.id%>"><%=tweet.content%></a></li>
 <%end%>
