--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,5 +1,7 @@
-<h1>Welcome,</h1>
+<h1>Welcome, <%=current_user.username%></h1>
 
 <% @tweets.each do |tweet| %>
   <li><a href="/tweets/<%=tweet.id%>"><%=tweet.content%></a></li>
 <%end%>
+<br></br>
+<a href="/tweets/create">CREATE TWEET</a>
