Add #logged_in? verification to GET /login and /tweets routes

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -6,12 +6,9 @@
   <label for="name">Your Name: </label>
   <input id="name" type="text" name="username">
   <br></br>
-  <label for="email">Your Email: </label>
-  <input id="email" type="text" name="email">
-  <br></br>
   <label for="password">Your Password: </label>
   <input id="password" type="text" name="password">
   <br></br>
-  <button type="submit" value="Log In">Log In</button>
+  <button type="submit" value="submit">Log In</button>
 
 </form>
