--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -4,5 +4,5 @@
 <input type="text" value="username" id="username" placeholder="Username:">
 <input type="password" value="password" id="password" placeholder="Password:">
 
-<input type="submit" value="LOG IN">
+<input type="submit" value="submit">
 </form>
