--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,8 +1,8 @@
+<h2>Add A TWEET</h2>
 <form action="/tweets" method="post">
-  <h3><%= current_user.username %></h3>
+
+  <label>Status:</label><br>
+  <input type="text" name="content">
   <br></br>
-  <label>New Tweet:</label><br>
-  <textarea name="tweet[content]" cols="50" rows="10"></textarea>
-  <br></br>
-  <input type="submit" name="submit" value="Submit">
+  <input type="submit" value="submit">
 </form>
