--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,7 +1,8 @@
+<h2>Edit Tweet</h2>
 <form method="post" action="/tweets/<%=@tweet.id%>">
   <input type="hidden" name="_method" value="patch">
-  <input type="text" name="tweet[content]" id="content" value="<%=@tweet.content%>"
+  <input type="text" name="content" id="content" value="<%=@tweet.content%>"
   <br></br>
   <br></br>
-  <input type="submit" name="" value="Update Tweet">
+  <input type="submit" value="submit">
 </form>
