--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,12 +1,13 @@
-User: <%=current_user.username%>
+You are logged in as User: <%=current_user.username%>
+
+<br></br>
+<h2><%=@tweet.user.username%></h2>
 <%=@tweet.content%>
 <br></br>
 
-<a href="/tweets/<%=@tweet.id%>/edit">EDIT TWEET</a>
-
-<% if current_user == @tweet.user.id %>
   <form method="post" action="/tweets/<%=@tweet.id%>/delete">
     <input id="hidden" type="hidden" name="_method" value="delete">
-   <input type="submit" value="Delete">
+   <input type="submit" value="Delete Tweet">
   </form>
-<% end %>
+
+  <a href="/tweets/<%=@tweet.id%>/edit">EDIT TWEET</a>
