--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -4,4 +4,4 @@
   <li><a href="/tweets/<%=tweet.id%>"><%=tweet.content%></a></li>
 <%end%>
 <br></br>
-<a href="/tweets/create">CREATE TWEET</a>
+<a href="/tweets/new">CREATE TWEET</a>
