--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,8 +1,7 @@
 <h3> Create Account </h3>
 <form method="post" action="/signup">
-  Name:<input type="text" name="user[username]">
-  Email Address:<input type="text" name="user[email]">
-  Password:<input type="password" name="user[password]">
-  <input type="submit" value="Sign Up">
+  Name:<input type="text" name="username">
+  Email Address:<input type="text" name="email">
+  Password:<input type="password" name="password">
+  <input type="submit" value="submit">
 </form>
-  
