--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,3 +1,7 @@
+<h2><%=@User.username%></h2>
+
 <% @user.tweets.each do |tweet| %>
-  <li><%=tweet.content%></li>
+<div>
+  <%=tweet.content%>
+</div>
 <%end%>
