--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -10,4 +10,4 @@ You are logged in as User: <%=current_user.username%>
    <input type="submit" value="Delete Tweet">
   </form>
 
-  <a href="/tweets/<%=@tweet.id%>/edit">EDIT TWEET</a>
+  <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
