--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,8 +1,8 @@
 <h2>FWITTER LOG IN</h2>
 <form method="post" action="/login">
 
-<input type="text" value="username" id="username" placeholder="Username:">
-<input type="password" value="password" id="password" placeholder="Password:">
+<input type="text" name="username" id="username" placeholder="Username:">
+<input type="password" name="password" id="password" placeholder="Password:">
 
 <input type="submit" value="submit">
 </form>
