TweetController - Added GET '/tweets/new' and corresponding POST '/tweets' routes and actions along with 'tweets/create_tweet' view.

--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -4,7 +4,9 @@
 <% Tweet.all.each do |tweet| %>
 
   <div>
-    <h4> <%= tweet.content %></h4>
+    <p> <%= tweet.content %></p>
   </div>
 
 <% end %>
+
+<button><a href="/logout">Log Out</a></button>
