--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,7 +1,8 @@
 <h1> Create a New Tweet </h1>
 
 <form method="POST" action="/tweets">
-  <textarea type="text" name="content" id="content" value="">Share your thoughts!</textarea>
+  <textarea type="text" name="content" id="content">Share your thoughts!</textarea>
+  <br></br>
   <button type="submit" value="submit">Submit</button>
 
 </form>
