--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -3,13 +3,13 @@
 <form method="POST" action="/signup">
   <label for="name">Your Name: </label>
   <input id="name" type="text" name="username">
-  <br>
+  <br></br>
   <label for="email">Your Email: </label>
   <input id="email" type="text" name="email">
-  <br>
+  <br></br>
   <label for="password">Your Password: </label>
   <input id="password" type="text" name="password">
-  <br>
-  <button type="submit" value="Sign Up">Sign UP</button>
+  <br></br>
+  <button type="submit" value="Sign Up">Sign Up</button>
 
 </form>
