--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,9 +1,9 @@
 <h1>Welcome <%=@user.username%></h1>
-
+<h4>Here are your tweets, </h4>
 <% @user.tweets.each do |tweet| %>
   <div>
     <p> <%=tweet.content%>  </p>
   </div>
 <% end %>
 
-<button><a href="/logout">Log Out</a></button>
+<a href="/logout">Log Out</a>
