--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,1 +1,6 @@
-create_user page
+<form method="POST" action="/signup">
+  <input type="text" name="username" placeholder="Username:">
+  <input type="text" name="email" placeholder="Email:">
+  <input type="password" name="password" placeholder="Password:">
+  <input type="submit" value="Sign Up">
+</form>
