--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,1 +1,4 @@
-tweets page
+<h2> Welcome, <%=current_user.username%> </h2>
+<%Tweet.all.each do |tweet|%>
+<p> <%= tweet.user.username %>: <%= tweet.content %> <p>
+<% end %>
