--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,6 +1,7 @@
+<h2> Create New User Form:</h2>
 <form method="POST" action="/signup">
-  <input type="text" name="username" placeholder="Username:">
-  <input type="text" name="email" placeholder="Email:">
-  <input type="password" name="password" placeholder="Password:">
+<p> Username:  <input type="text" id="username" name="username" placeholder="Username:"> </p>
+<p> Email:  <input type="text" id="email" name="email" placeholder="Email:"> </p>
+<p> Password:  <input type="password" id="password" name="password" placeholder="Password:"> </p>
   <input type="submit" value="Sign Up">
 </form>
