--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,1 +1,6 @@
-login page
+<h2> Log In:</h2>
+<form method="POST" action="/login">
+  <input type="text" id=":username" name="username" placeholder="Username:">
+  <input type="password" id="passwprd" name="password" placeholder="Password:">
+  <input type="submit" value="Log In">
+</form>
