--- a/app/views/application/index.erb
+++ b/app/views/application/index.erb
@@ -1,5 +1,5 @@
 <h2>Welcome to Fwitter</h2>
 
-<a href='/users/new'>Sign Up</a>
+<a href='/signup'>Sign Up</a>
 
-<a href='/users/login'>Log In</a>
+<a href='/login'>Log In</a>
