--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,4 +1,10 @@
 <form method="POST" action="/tweets">
+
+  <label for="username">Username</label>
+  <input type="text" name="username">
+
+  <label for="content">Content</label>
   <input type="text" name="content">
+
   <input type="submit" value="submit">
 </form>
