--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,4 +1,4 @@
 <h2> Welcome, <%=current_user.username%> </h2>
-<%Tweet.all.each do |tweet|%>
+<%@tweets.each do |tweet|%>
 <p> <%= tweet.user.username %>: <%= tweet.content %> <p>
 <% end %>
