--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,4 +1,5 @@
 <h2> Welcome, <%=current_user.username%> </h2>
-<%@tweets.each do |tweet|%>
-<p> <%= tweet.user.username %>: <%= tweet.content %> <p>
+
+<%Tweet.all.each do |tweet|%>
+<p><%= tweet.content %> <p>
 <% end %>
