--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,1 +1,10 @@
-edit tweets 
+<h2> Edit Tweets </h2>
+
+  <form method="POST" action="/tweets/<%= @tweet.id%>"
+    <input id="hidden" type="hidden" name="_method" value="PATCH">
+
+    <label for="content">Content</label>
+    <input type="text" name="content" value=" <%=@tweet.content%>">
+
+    <input type="submit" value="submit">
+  </form>
