--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,3 +1,5 @@
-<% current_user.tweets.each.with_index(1) do |tweet, index| %>
-  <p> <%=index%>.  <%=tweent.content%> </p>
+<h2> Tweets by: <%= @user.username %></h2>
+
+<% @user.tweets.each do |tweet| %>
+  <p> <%=tweet.content%> </p>
   <% end %>
