--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,5 +1,5 @@
-<h2> Welcome, <%=current_user.username%> </h2>
+<h2> Welcome, <%=current_user.username%>! </h2>
 
 <%Tweet.all.each do |tweet|%>
-<p><%= tweet.content %> <p>
+<p> <%= tweet.content %> <p>
 <% end %>
