Make changes to controller and views so that web app not only passes tests but also functions properly

--- a/app/views/tweets.erb
+++ b/app/views/tweets.erb
@@ -1,6 +1,10 @@
 
 <h1>Welcome, <%= @current_user.username %></h1>
 
+<% if flash.has?(:message) %>
+  <h3><%= flash[:message] %></h3>
+<% end %>
+
 <h2>Here are all of the tweets</h2>
 
 <% User.all.each do |user| %>
