--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -4,8 +4,7 @@
   <%= @tweet.content %>
 </p>
 
-<form action="/tweets/<%= @tweet.id %>/edit" method="POST">
-  <input id="hidden" type="hidden" name="_method" value="patch">
+<form action="/tweets/<%= @tweet.id %>/edit" method="get">
   <button type="submit">Edit Tweet</button>
 </form>
 
