--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,9 +1,12 @@
-
 <body>
-<form action="/tweets" method="POST"
-<label for="username">Username: </label>
-  <input type="text" id="username" name="user[username]">
-   <input type="text" id="email" name=user[email]>
- <input type="text" id="password" name=user[password]>
-  <input type="submit" >
+	<form action="/signup" method="POST">
+		<label for="username">Username: </label>
+  			<input type="text" id="username" name="user[username]">
+  		<label for="email">Email:</label>
+  			<input type="text" id="email" name=user[email]>
+  		<label for="password">Password:</label>
+ 			<input type="text" id="password" name=user[password]>
+
+  		<input type="submit" value="Submit">
+
 </body>
