--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,1 +1,10 @@
-<h1>Howdy</h1>
+<body>
+	<form action="/login" method="POST">
+		<label for="username">Username: </label>
+  			<input type="text" id="username" name="user[username]">
+  		<label for="password">Password:</label>
+ 			  <input type="text" id="password" name=user[password]>
+
+  		<input type="submit" value="Submit">
+
+</body>
