--- a/app/views/oldlayout.erb
+++ b/app/views/oldlayout.erb
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   </head>
   <body>
+    <%= binding.pry %>
     <nav>
       <% if logged_in? %>
 
