--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,12 +1,13 @@
-<body>
+<h3>Sign Up Here</h3>
+
 	<form action="/signup" method="POST">
 		<label for="username">Username: </label>
-  			<input type="text" id="username" name="user[username]">
+  			<input type="text" name="username"> <!--removed id= for username, email, and password-->
   		<label for="email">Email:</label>
-  			<input type="text" id="email" name=user[email]>
+  			<input type="text" name="email">
   		<label for="password">Password:</label>
- 			<input type="text" id="password" name=user[password]>
+ 			<input type="text" name="password">
 
   		<input type="submit" value="Submit">
 
-</body>
+</form>
