--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,7 @@
-<h2>index view</h2>
-<h1>Welcome to Fwitter</h1>
-
-<h4>Please sign up or log in to access your Fwitter account.</h4>
-<a href="/signup">Sign Up</a>
-<a href="/login">Log In</a>
+<% if logged_in? %>
+  <a href="/tweets"> View Tweets </a>
+  <a href="/logout"> Log Out </a>
+<% else %>
+  <a href="/signup">Sign Up</a>
+  <a href="/login"> Log In </a>
+<%end %>
