--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,4 +1,7 @@
-<% @tweets.each do |tweet| %>
+Welcome, <%=@user.username %>
+
+<% Tweet.all.each do |tweet| %>
   <%= tweet.content %>
   <%= tweet.user.name %>
 <% end %>
+<a href="/tweets/new">New Tweet</a>
