--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,7 +1,7 @@
 Content:
 <%= @tweet.content %>
-<a href="/tweets/<%=@tweet.id%>/edit" value="Edit Tweet">
+<a href="/tweets/<%=@tweet.id%>/edit" value="Edit Tweet">Edit Tweet</a>
 <form action="/tweets/<%=@tweet.id%>/delete" method="post">
   <input id="hidden" type="hidden" name="_method" value="delete">
-  <button type="submit" value="Delete Tweet">
-  </form>  
+  <input type="submit" value="Delete Tweet">
+</form>
