--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,15 +1,13 @@
-
-
 <% if logged_in? %>
   <h2>Welcome, <%= current_user.username %> </h2>
-  <% Tweet.all.each do |tweet|
-    tweet.content
-  end %>
-
-
+  <% Tweet.all.each do |tweet| %>
+    <%if tweet.user_id == current_user.id%>
+      <%=tweet.content%>
+    <%end%>
+  <%end%>
   <a href="/logout"> Log Out </a>
 <% else %>
-<h4>Else show Sign Up or Login links</h4>
+  <h4>Else show Sign Up or Login links</h4>
 
   <a href="/signup">Sign Up</a>
 
