--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,1 +1,10 @@
 <h2>/tweets/create_tweets view</h2>
+<h3>Create Tweet</h3>
+
+<form method="POST" action="/tweets">
+  <label for=":content"> Tweet: </label>
+  <input type="text" id=":content" name="content">
+  </br>
+  </br>
+  <input type="submit" id=":click_button"  value="submit">
+</form>
