--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,1 +1,27 @@
-<h2>/tweets/edit_tweets view</h2>
+<% tweet_id = @tweet.id %>
+<p><%= @tweet.content %></p>
+
+
+<form method="POST" action="/tweet/form/:id">
+  <input type="hidden" id=":tweet_id" name= "#{<%= id %>}" >
+  <label for=""> : </label>
+  <input type="text" id=":" name="">
+  </br>
+  </br>
+  <label for=""> : </label>
+  <input type="text" id=":" name="">
+  </br>
+  </br>
+  <label for=""> : </label>
+  <input type="text" id=":" name="">
+  </br>
+  </br>
+  <input type="submit" value="submit">
+</form>
+
+
+<a href="/tweets/:id/delete"> Delete Tweet </a>
+
+
+<a href="/tweets/index">View All Tweets</a>
+<a href="/users/logout"> Log Out </a>
