--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,27 +1,24 @@
-<% tweet_id = @tweet.id %>
-<p><%= @tweet.content %></p>
+<% @tweet %>
 
-
-<form method="POST" action="/tweet/form/:id">
-  <input type="hidden" id=":tweet_id" name= "#{<%= id %>}" >
-  <label for=""> : </label>
-  <input type="text" id=":" name="">
+<form method="POST" action="/tweets/:id">
+  <label for=""> Tweet: </label>
+  <p>
+  <textarea name=":tweet.content" rows="20" cols="80">
+  <%= @tweet.content %>
+  </textarea>
+  </p>
   </br>
   </br>
-  <label for=""> : </label>
-  <input type="text" id=":" name="">
-  </br>
-  </br>
-  <label for=""> : </label>
-  <input type="text" id=":" name="">
-  </br>
-  </br>
-  <input type="submit" value="submit">
+  <input type="hidden" id=":id" name= "#{@tweet.id}" >
+  <input id="hidden" type="hidden" name="_method" value="patch">
+  <input type="submit" value="submit"><input type="reset">
 </form>
-
-
+</br>
+</br>
 <a href="/tweets/:id/delete"> Delete Tweet </a>
-
-
+</br>
+</br>
 <a href="/tweets/index">View All Tweets</a>
+</br>
+</br>
 <a href="/users/logout"> Log Out </a>
