--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -2,4 +2,8 @@
 <%= @tweet.content %><br /><br />
 
 <a href="/tweets/<%=@tweet.id%>/edit"><button type="button">Edit Tweet</button></a><br /><br />
-<a href="/tweets/<%=@tweet.id%>/delete"><button type="button">Delete Tweet</button></a><br /><br />
+<!-- <a href="/tweets/<%=@tweet.id%>/delete"><button type="button">Delete Tweet</button></a><br /><br /> -->
+<form method="POST" action="/tweets/<%=@tweet.id%>/delete">
+  <input type="hidden" id="hidden" name="_method" value="delete" />
+  <input type="submit" id="submit" value="Delete Tweet" />
+</form>
