--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,21 +1,17 @@
 <% @tweet %>
 
-<form method="POST" action="/tweets/:id">
+<form method="POST" action="/tweets/<%= @tweet.id %>">
   <label for=""> Tweet: </label>
   <p>
-  <textarea name=":tweet.content" rows="20" cols="80">
+  <textarea name="content" id=":content" rows="2" cols="70">
   <%= @tweet.content %>
   </textarea>
   </p>
   </br>
   </br>
-  <input type="hidden" id=":id" name= "#{@tweet.id}" >
   <input id="hidden" type="hidden" name="_method" value="patch">
   <input type="submit" value="submit"><input type="reset">
 </form>
-</br>
-</br>
-<a href="/tweets/:id/delete"> Delete Tweet </a>
 </br>
 </br>
 <a href="/tweets/index">View All Tweets</a>
