--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,13 +1,23 @@
 <% @tweet %>
-<form method="POST" action="/tweet/form/:id">
-  <input type="hidden" id=":id" name= "#{<%= @tweet.id %>}" >
+
+<form method="POST" action="/tweets/<%= @tweet.id %>/delete">
+  <label for=""> Tweet: </label>
+  <p>
+  <textarea name="content" id=":content" rows="2" cols="70">
+  <%= @tweet.content %>
+  </textarea>
+  </p>
+  </br>
+  </br>
+  <input id="hidden" type="hidden" name="_method" value="delete">
+  <input type="submit" id= "click_button" value="Delete Tweet">
 </form>
-<p><%= @tweet.content %></p>
-
-
-<a href="/tweets/edit/:id">Edit Tweet</a>
-<a href="/tweets/delete/:id"> Delete Tweet </a>
-
-
+</br>
+</br>
+<a href="/tweets/<%= @tweet.id %>/edit"> Edit Tweet </a>
+</br>
+</br>
 <a href="/tweets/index">View All Tweets</a>
+</br>
+</br>
 <a href="/users/logout"> Log Out </a>
