--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -2,5 +2,5 @@
 
 	<form action="/tweets" method="POST">
 		Compose: <input type="text" name="content"><br>
-		<input class="submit" value="Submit">
+		<input type="submit" id="submit" value="Submit">
 	</form>
