--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,7 +1,8 @@
-<%=@tweet.content %>
+<%=@tweet.content%>
+
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
 
 <form method="POST" action="/tweets/<%=@tweet.id%>/delete">
 	<input id="hidden" type="hidden" name="_method" value="DELETE">
-	<input type="submit" value="Delete Tweet">
+	<input type="submit"  id="submit" value="Delete Tweet">
 	</form>
-<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
