--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,19 +7,22 @@
 	<body>
 		<nav>
 			<% if logged_in? %>
-			<a href="/tweets/create"> Compose Tweet </a>. <!--changed "tweets/new" to 'tweets/create'-->
+			<a href="/tweets"> Home Page </a>
+			<a href="/tweets/new"> Compose Tweet </a>.
 			<a href="/logout">Log Out</a><br>
 			Welcome, <%=current_user.username%><br>
 
 			<%else%>
 			<a href="/signup"> Sign Up</a>
 			<a href="/login"> Sign In</a>
-		<%end%>
 
+			<div class="container">
+			<h1>Welcome to Fwitter</h1>
+
+		</div>
+		<%end%>
+<%=yield%>
 		</nav>
-		<div class="container">
-		<h1>Welcome to Fwitter</h1>
-		<%=yield%>
-	</div>
+
 </body>
 </html>
