--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,10 +1,11 @@
-Welcome <%= current_user.username%>
 <body>
+
+
 <h3>Tweets</h3>
 
 	<% @tweets.each do |tweet| %>
 		<div>
-			<%= tweet.content %>
+		<a href="/tweets/<%=tweet.id%>/edit"><%= tweet.content %></a>
 		</div>
 	<%end%>
 </body>
