--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,6 +1,6 @@
 <body>
 <h1>Login</h1>
-<form action="/tweets" method="POST">
+<form action="/login" method="POST">
 
   		<input type="text" name="username" placeholder="Username:">
  		<input type="text" name="password" placeholder="Password:">
