--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,7 +1,7 @@
 <% if flash.has?(:message) %>
   <%= flash[:message] %>
 <% end %>
-<h1>Login</h1>
+<h2 class="subtitle">Login</h2>
 <form method="post" action="/login">
 Username: <input type="text" placeholder="Username" name="username" id="username" required>
 <br/><br/>
