--- a/app/views/create_tweet.erb
+++ b/app/views/create_tweet.erb
@@ -1,5 +1,5 @@
 
 <form action="/submit_tweet" method="post">
-<input type='text' name="content" placeholder="Tweet here!" id="content" required>
+<textarea rows="2" cols="40" name="content" id="content"  style="resize:none" required="">Make a Tweet!</textarea>
 <input type="submit" value="submit" id="submit" />
 </form>
