--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,12 +1,16 @@
 <html>
 <head>
 <title>Fwitter</title>
+<link rel="stylesheet" type="text/css" href="/styles/main.css">
 </head>
 <body>
+  <div id="background-image"></div>
+  <div class="text">
   <%= yield %>
+</div>
   <br/><br/>
 </body>
 
-<footer>Fwitter &copy; 2018 -- By Naomi Dennis </footer>
+<footer class="text">Fwitter &copy; 2018 -- By Naomi Dennis </footer>
 
 </html>
