--- a/app/views/logged_in_layout.erb
+++ b/app/views/logged_in_layout.erb
@@ -1,10 +1,14 @@
 <html>
 <head>
 <title>Fwitter</title>
+<link rel="stylesheet" type="text/css" href="/styles/main.css">
 </head>
 <body>
-  <h4>Logged in as <%= @user.username %> </h4>
+  <h4 class="subtitle">Logged in as <%= @user.username %> </h4>
+  <div id="background-image"></div>
+  <div class="text">
   <%= yield %>
+</div>
   <br/><br/>
 </body>
 
