--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -5,7 +5,7 @@
   <br><br>
   <input type="text" id="email" name="email" placeholder="Email:"/>
   <br><br>
-  <input type="text" id="password" name="password" placeholder="Password:"/>
+  <input type="password" id="password" name="password" placeholder="Password:"/>
   <br><br>
   <input type="submit" id="Sign Up" value="Sign Up"/>
 </form>
