--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,1 +1,8 @@
 <h1>Welcome, <%=@user.username%></h1>
+
+<h3>Tweets</h3>
+<ul>
+  <% @tweets.each do |tweet| %>
+    <li><%= tweet.content %></li>
+  <% end %>
+</ul>
