--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -1,5 +1,11 @@
+<h1>Edit Tweet</h1>
 <form method="post" action="/tweets/<%=@tweet.id%>">
   <input type="hidden" id="hidden" name="_method" value="patch"/>
   <input type="text" id="content" name="content" value="<%=@tweet.content%>"/>
   <input type="submit" id="submit" value="Edit Tweet"/>
+</form>
+<br>
+<form method="post" action="/tweets/<%=@tweet.id%>/delete">
+  <input type="hidden" id="hidden" name="_method" value="delete"/>
+  <input type="submit" id="delete" value="Delete Tweet"/>
 </form>
