--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,5 +1,7 @@
 <h1><%=@user.username%></h1>
-
+<br>
+<a href="/tweets/new"><h2>Add New Tweet</h2></a>
+<br><br>
 <h3>Tweets:</h3>
 <ul>
   <% @user.tweets.each do |tweet| %>
