--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,2 @@
-<h1>Welcome to Fwitter</h1>
+<p>New to Fwitter? <a href='/signup'>Sign Up</a> </p>
+  <p>Already a member? <a href='/login'>Log In</a></p>
