--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -6,7 +6,15 @@
   </head>
   <body>
     <form class="" action="/tweets" method="post">
-
+      <h1>Sign Up</h1>
+      <label for="">Enter Email address:</label>
+      <input type="text" name="email" value=""><br>
+      <label for="">Enter User Name:</label>
+      <input type="text" name="username" value=""><br>
+      <label for="">Enter Password:</label>
+      <input type="text" name="password" value="">
+      <br><br>
+      <input type="submit"  value="submit">
     </form>
   </body>
 </html>
