--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,7 +7,16 @@
   </head>
   <body>
     <nav>
-      
+      <% if logged_in? %>
+        <p>Welcome, <%=current_user.username %></p>
+        <a href="/tweets/new"> Create Tweet </a>
+        <a href="/logout"> Log Out </a>
+
+
+      <% else %>
+        <a href="/signup">Sign Up</a>
+        <a href="/login"> Sign In </a>
+      <%end %>
 
     </nav>
     <div class="container">
