--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -5,8 +5,12 @@
     <title></title>
   </head>
   <body>
-    <form class="" action="" method="post">
-
+    <h1>Welcome, </h1>
+    <form class="" action="/tweets" method="post">
+      <label for="">Create New Tweet:</label>
+      <input type="text" name="content" id="content">
+      <br><br>
+      <input type="submit" value="submit">
     </form>
   </body>
 </html>
