--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,16 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h1>Welcome, </h1>
-    <form class="" action="/tweets" method="post">
-      <label for="">Create New Tweet:</label>
-      <input type="text" name="content" id="content">
-      <br><br>
-      <input type="submit" value="submit">
-    </form>
-  </body>
-</html>
+<form method="post" action="/tweets">
+  Content: <input type="text" name="content" id="content">
+  <input type="submit" value="submit">
+</form>
