--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,7 +1,8 @@
-Content:
-<%= @tweet.content %>
-<a href="/tweets/<%=@tweet.id%>/edit" value="Edit Tweet">Edit Tweet</a>
-<form action="/tweets/<%=@tweet.id%>/delete" method="post">
-  <input id="hidden" type="hidden" name="_method" value="delete">
-  <input type="submit" value="Delete Tweet">
+<h2><%= @tweet.content %></h2>
+
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
+
+<form method="post" action="/tweets/<%=@tweet.id%>/delete">
+  <input type="hidden" id="hidden" name="_method" value="delete"/>
+  <input type="submit" id="delete" value="Delete Tweet"/>
 </form>
