--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,20 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <form class="" action="/tweets" method="post">
-      <h1>Sign Up</h1>
-      <label for="">Enter Email address:</label>
-      <input type="text" name="email" value=""><br>
-      <label for="">Enter User Name:</label>
-      <input type="text" name="username" value=""><br>
-      <label for="">Enter Password:</label>
-      <input type="text" name="password" value="">
-      <br><br>
-      <input type="submit"  value="submit">
-    </form>
-  </body>
-</html>
+New User Sign-up
+
+<form action="/signup" method="post">
+  Username: <input type="text" name="username" id="username">
+  Email: <input type="text" name="email" id="email">
+  Password: <input type="password" name="password" id="password">
+  <input type="submit" value="Sign Up">
+</form>
