--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,7 +1,5 @@
 <%= @user.username %>
 <br>
-<ul>
-  <% @user.tweets.each do |tweet| %>
-  <li>  <%= tweet.content %> </li>
-  <% end %>
-</ul>
+<% @user.tweets.each do |tweet| %>
+  <%= tweet.content %>
+<% end %>
