--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,14 +8,16 @@
   <body>
     <nav>
       <% if logged_in? %>
-        <p>Welcome, <%=current_user.username %></p>
-        <a href="/tweets/new"> Create Tweet </a>
-        <a href="/logout"> Log Out </a>
+        <h2><p>Welcome, <%=current_user.username %></p></h2>
+        <button type="button" name="button"><a href="/tweets/new"> Create Tweet </a></button>
+        <button type="button" name="button"><a href="/logout"> Log Out </a></button>
+        <button type="button" name="button"><a href="/tweets">Tweets</a></button>
+
 
 
       <% else %>
-        <a href="/signup">Sign Up</a>
-        <a href="/login"> Sign In </a>
+        <h3><a href="/signup">Sign Up</a></h3>
+        <h3><a href="/login"> Sign In </a></h3>
       <%end %>
 
     </nav>
