--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,7 +8,7 @@
   <body>
     <nav>
       <% if logged_in? %>
-        <h2><p>Welcome, <%=current_user.username %></p></h2>
+        <p>Welcome, <%=current_user.username %></p>
         <button type="button" name="button"><a href="/tweets/new"> Create Tweet </a></button>
         <button type="button" name="button"><a href="/logout"> Log Out </a></button>
         <button type="button" name="button"><a href="/tweets">Tweets</a></button>
