--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,5 +1,7 @@
 <form method="post" action="/tweets/<%=@tweet.id%>">
-  <input id="hidden" type="hidden" name="_method" value="patch">
-  Content: <input type="text" name="content" value="<%=@tweet.content%>">
+  <input type="hidden" name="_method" id="hidden" value="patch">
+
+  <input type="text" name="content" value="<%=@tweet.content%>">
+
   <input type="submit" value="submit">
 </form>
