--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,8 +1,11 @@
-<h2><%= @tweet.content %></h2>
+<h3><%= @tweet.user.username %></h3>
+<p><%= @tweet.content%></p>
 
-<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
+<% #if @tweet.user == @user %>
+  <form method="post" action="/tweets/<%=@tweet.id%>/delete">
+    <input type="submit" value="Delete Tweet">
+  </form>
+  <br></br>
+  <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
 
-<form method="post" action="/tweets/<%=@tweet.id%>/delete">
-  <input type="hidden" id="hidden" name="_method" value="delete"/>
-  <input type="submit" id="delete" value="Delete Tweet"/>
-</form>
+<% #end %>
