--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,3 @@
-<body>
-  <h1>Welcome to Fwitter</h1>
-</body>
+<h1>Welcome to Fwitter</h1>
+<p><a href="/signup">Sign Up!</a></p>
+<p><a href="/signup">Log In!</a></p>
