--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,3 @@
 <h1>Welcome to Fwitter</h1>
 <p><a href="/signup">Sign Up!</a></p>
-<p><a href="/signup">Log In!</a></p>
+<p><a href="/login">Log In!</a></p>
