--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,6 +1,6 @@
-<h1>Log In To Ftwitter:</h1>
+<h1>Log In To Fwitter:</h1>
 
-<form action="/tweets" method="POST">
+<form action="/login" method="POST">
   <label for="">Email:</label>
   <input type="text"  name="email" value="">
   <label for="">Password:</label>
