--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,14 +1,5 @@
-<h2>Welcome, <%=@user.username%>!</h2>
-<h6>Your Tweets:</h6>
-  <%@tweets.each do |tweet|%>
-    <p><%=tweet.content%></p>
-    <a href="/tweets/<%=tweet.id%>/edit">Edit Tweet</a>
-
-    <form method="post" action="/tweets/<%=tweet.id%>/delete">
-      <input id="hidden" type="hidden" name="_method" value="delete">
-      <input type="submit" value="Delete Tweet">
-    </form>
-    <br></br>
-  <%end%>
-
-<a href="/tweets/new">Post a tweet</a>
+  <h2>Welcome, <%=current_user.username%>!</h2>
+    <h3>All Tweets:</h3>
+    <%@tweets.each do |t| %>
+    <h5><%=t.content%></h5>
+    <%end%>
