--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,8 +1,8 @@
 <h1>Log In To Fwitter:</h1>
 
-<form action="/login" method="POST">
-  <label for="">Email:</label>
-  <input type="text"  name="email" value="">
+<form action="/login" method="post">
+  <label for="">Username:</label>
+  <input type="text"  name="username" value="">
   <label for="">Password:</label>
   <input type="text" name="password" value="">
   <input type="submit" name="submit" value="Log In">
