--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,13 +1,5 @@
-<%@current_user.tweets.each do |tweet|%>
+<h3>Here are your tweets, <%=@user.username%></h3>
+<%@user.tweets.each do |tweet|%>
   <p><%=tweet.content%></p>
-  <a href="/tweets/<%=tweet.id%>/edit">Edit Tweet</a>
-  <form method="post" action="/tweets/<%=tweet.id%>/delete">
-    <input id="hidden" type="hidden" name="_method" value="delete">
-    <input type="submit" value="Delete Tweet">
-  </form>
   <br></br>
 <%end%>
-
-<a href="/tweets/new">Post a tweet</a>
-<br></br>
-<a href="/logout">Logout</a>
