--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -3,11 +3,11 @@
 <h2><%=@tweet.user.username%></h2>
 <p><%=@tweet.content%></p>
 
-<%if @tweet.user_id == @user.id%>
+<!--if @tweet.user_id == @user.id-->
 <a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
 <form action="/tweets/<%=@tweet.id%>/delete" method="post">
 
-  <input type="submit" value="Delete Tweet">
+  <input type="submit" value="Delete Tweet" id="Delete Tweet">
 
 </form>
-<%end%>
+<!--end-->
